--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "COMP 426 stock project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Christian J Campos Ruiz",
   "license": "ISC",
