--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Christian J Campos Ruiz",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "browser-sync": "^2.26.13",
+    "data-store": "^4.0.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "finnhub": "^1.2.1"
   }
 }
